--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -12,4 +12,6 @@ jobs:
       - name: hello-action
         uses: ./.github/actions/hello-world
         with:
-          first-greeting: "Learning Lab User"        
+          first-greeting: "Learning Lab User"
+          second-greeting: "Test"
+          third-greeting: "----"        
